#      qmlfkmzkk qskdjfmqslfk mlqzemfj qmlj mldf
#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "Packet of No Return"

# bug.txt should follow the exact same format

# Oh, thank you, Evileye :)
# - Jir -

20/08/2002 (Jir)
[O]- some 'Rogue' tributes
[m]- more changes for store code.
[m]- max_k_idx
[G]- stores allow players to stay as long as no one else is waiting.
[P]- player won't receive any damages when in a store/house.

20/08/2002 (evileye)
[m]- changed file transfers so that they use lists.
[P]- non valid accounts have more restrictions added.

19/08/2002 (evileye)
[m]- delete tempfiles when used (/tmp won't fill up)
     windows mkstemp allows for this by filling string.
[B]- fixed problem with new savefile creation (again?)
[m]- made file transfer point to lib.
[B]- weak security (starting '/', presence of '..')
[m]- corrected the buffer that file transfer uses for acks/errs
     so it does not sit waiting for action.
[m]- Added client file sending (TEMP..) move it if you want....
     I realise that a LIST of files would be better, rather than
     having to mess with the srcs.

18/08/2002 (evileye)
[m]- File transfer changes. I have changed script upload in client to
     use the file transfer system which I wrote. Server replies with
     suitable messages regarding success/permission. My intent is to 
     change the system so that it will upload/download into a
     predefined set of directories (and check for illegal characters in
     filenames which pose a security threat).
     Currently it will send/receive from/in the current working directory.
     I require more information regarding WHERE we need file transfer
     access before I can complete.

18/08/2002 (Jir)
[G]- ow_info.txt and st_info.txt backported.
     (st_info.txt will come; other fixes needed)